[project]
name = ""
version = ""
description = ""
authors = [
    {name = "\"Cerbos Developers\"", email = "\"help@cerbos.dev\""},
]
dependencies = [
    "cerbos>=0.4.1",
    "SQLAlchemy>=1.4.40",
    "fastapi>=0.81.0",
    "uvicorn>=0.18.3",
    "cerbos-sqlalchemy>=0.1.3",
]
requires-python = ">=3.10"
license = {text = "\"Apache-2.0\""}
[project.optional-dependencies]

[tool.pdm]
#allow_prereleases = true  # this is also required to pick the latest dev versions from test PyPI

#[[tool.pdm.source]]
#url = "https://test.pypi.org/simple"
#name = "test"
#verify_ssl = true

[tool.pdm.dev-dependencies]
lint = [
    "black>=22.6.0",
    "isort>=5.10.1",
]
dev = [
    "ptpython>=3.0.20",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = "pytest"
lint = "black ."
sort = "isort ."
format = {composite = ["lint", "sort"]}
demo = "python main.py"

[tool.isort]
profile = 'black'
