[project]
name = ""
version = ""
description = ""
authors = [
    {name = "\"Cerbos Developers\"", email = "\"help@cerbos.dev\""},
]
dependencies = [
    "cerbos>=0.10.1",
    "sqlalchemy>=2.0.21",
    "fastapi>=0.81.0",
    "uvicorn>=0.18.3",
    "cerbos-sqlalchemy>=0.3.1",
    "pydantic>=2.3.0",
]
requires-python = ">=3.8"
license = {text = "\"Apache-2.0\""}
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = 'black'

[tool.pdm]
# allow_prereleases = true
#
# [[tool.pdm.source]]
# url = "https://test.pypi.org/simple"
# name = "test"
# verify_ssl = true


[tool.pdm.dev-dependencies]
lint = [
    "black>=22.6.0",
    "isort>=5.10.1",
]
dev = [
    "ptpython>=3.0.20",
]

[tool.pdm.scripts]
lint = "black ."
sort = "isort ."
format = {composite = ["lint", "sort"]}
demo = "python main.py"
